--- a/css/style.css
+++ b/css/style.css
@@ -23,16 +23,7 @@ h3 {
 	color: #ed6c85;
 }
 
-.btn {
-	padding: 15px 30px;
-	margin: 40px 0;
-	color: #faf3bc;
-	background: #4fb69f url('img/texture.png') no-repeat right top;
-	border-radius: 25px;
-	-webkit-border-radius: 25px;
-	-moz-border-radius: 25px;
-	text-transform: uppercase;
-}
+
 
 btn:hover {
 	background-color: black; 
@@ -78,21 +69,26 @@ ul.nav li a {
 	text-decoration: none;
 }
 
-#intro {
-	margin: 50px 0 75px 0;
-}
+
 
 #new-photo img {
-	border: 8px solid black;
+	border: 3px solid black;
 	margin: 0 0 20px 0;
 }
 
+#about img {
+	border: 3px solid black;
+	margin: 0 0 0px 0;
+	
+}
+
 #popular-cupcakes img {
-	border: 8px solid black;
+	border: 3px solid black;
 }
 
 #featured-art img {
-	border: 8px solid black;
+	border: 3px solid black;
+	
 }
 
 #contact span{
@@ -100,10 +96,12 @@ ul.nav li a {
 	font-weight: 600;
 }
 
-
+#me {
+	text-align: center;
+}
 
 #copyright {
-	border-top: 8px solid #2a0400;
+	border-top: 3px solid black;
 	padding: 10px 0;
 	margin: 15px 0;
 	text-align: center;
