added fashion updated

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,6 @@ ul.nav li a {
 #copyright {
 	border-top: 3px solid black;
 	padding: 10px 0;
-	margin: 15px 0;
+	margin: 15px ;
 	text-align: center;
 }
