--- a/css/grid.css
+++ b/css/grid.css
@@ -11,7 +11,7 @@
 .grid_3 { width: 235px; }
 .grid_4 { width: 320px; }
 .grid_5 { width: 405px; }
-.grid_6 { width: 490px; }
+.grid_6 { width: 490px; margin: 0px auto !important; }
 .grid_7 { width: 575px; }
 .grid_8 { width: 660px; }
 .grid_9 { width: 745px; }
